Fixed scrolling bug on mobile screens

--- a/backside-frontend/src/components/letter/letter/Letter.css
+++ b/backside-frontend/src/components/letter/letter/Letter.css
@@ -52,7 +52,7 @@
     display: block;
     position: relative;
     max-height: 100%;
-    overflow: auto;
+    overflow: hidden;
     width: 100%;
   }
 
